--- a/day17/package.json
+++ b/day17/package.json
@@ -3,14 +3,16 @@
   "version": "1.0.0",
   "description": "Move app allowing to search for movies, see their short description and rating.",
   "main": "script.js",
+  "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node server.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "dotenv": "^16.4.5",
-    "express": "^4.19.2"
+    "express": "^4.19.2",
+    "node-fetch": "^3.3.2"
   }
 }
